[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
structopt = "0.3.20"
reqwest = {version = "0.10.9", features = ["blocking", "gzip", "cookies"] }
color-eyre = "0.5.8"
dotenv = "0.15.0"